csbind/src/joltc.rs

#[test]
fn bindgen_test_layout_JPH_MassProperties() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_MassProperties> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_MassProperties>(),
        68usize,
        concat!("Size of: ", stringify!(JPH_MassProperties))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_MassProperties>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_MassProperties))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).mass) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_MassProperties),
            "::",
            stringify!(mass)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).inertia) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_MassProperties),
            "::",
            stringify!(inertia)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_CollideSettingsBase {
    #[doc = " How active edges (edges that a moving object should bump into) are handled"]
    pub activeEdgeMode: JPH_ActiveEdgeMode,
    #[doc = " If colliding faces should be collected or only the collision point"]
    pub collectFacesMode: JPH_CollectFacesMode,
    #[doc = " If objects are closer than this distance, they are considered to be colliding (used for GJK) (unit: meter)"]
    pub collisionTolerance: f32,
    #[doc = " A factor that determines the accuracy of the penetration depth calculation. If the change of the squared distance is less than tolerance * current_penetration_depth^2 the algorithm will terminate. (unit: dimensionless)"]
    pub penetrationTolerance: f32,
    #[doc = " When mActiveEdgeMode is CollideOnlyWithActive a movement direction can be provided. When hitting an inactive edge, the system will select the triangle normal as penetration depth only if it impedes the movement less than with the calculated penetration depth."]
    pub activeEdgeMovementDirection: JPH_Vec3,
}
#[test]
fn bindgen_test_layout_JPH_CollideSettingsBase() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_CollideSettingsBase> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_CollideSettingsBase>(),
        28usize,
        concat!("Size of: ", stringify!(JPH_CollideSettingsBase))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_CollideSettingsBase>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_CollideSettingsBase))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).activeEdgeMode) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_CollideSettingsBase),
            "::",
            stringify!(activeEdgeMode)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).collectFacesMode) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_CollideSettingsBase),
            "::",
            stringify!(collectFacesMode)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).collisionTolerance) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_CollideSettingsBase),
            "::",
            stringify!(collisionTolerance)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).penetrationTolerance) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_CollideSettingsBase),
            "::",
            stringify!(penetrationTolerance)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).activeEdgeMovementDirection) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_CollideSettingsBase),
            "::",
            stringify!(activeEdgeMovementDirection)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_CollideShapeSettings {
    pub base: JPH_CollideSettingsBase,
    #[doc = " When > 0 contacts in the vicinity of the query shape can be found. All nearest contacts that are not further away than this distance will be found (unit: meter)"]
    pub maxSeparationDistance: f32,
    #[doc = " How backfacing triangles should be treated"]
    pub backFaceMode: JPH_BackFaceMode,
}
#[test]
fn bindgen_test_layout_JPH_CollideShapeSettings() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_CollideShapeSettings> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_CollideShapeSettings>(),
        36usize,
        concat!("Size of: ", stringify!(JPH_CollideShapeSettings))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_CollideShapeSettings>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_CollideShapeSettings))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).base) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_CollideShapeSettings),
            "::",
            stringify!(base)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).maxSeparationDistance) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_CollideShapeSettings),
            "::",
            stringify!(maxSeparationDistance)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).backFaceMode) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_CollideShapeSettings),
            "::",
            stringify!(backFaceMode)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_ShapeCastSettings {
    pub base: JPH_CollideSettingsBase,
    #[doc = " How backfacing triangles should be treated (should we report moving from back to front for triangle based shapes, e.g. for MeshShape/HeightFieldShape?)"]
    pub backFaceModeTriangles: JPH_BackFaceMode,
    #[doc = " How backfacing convex objects should be treated (should we report starting inside an object and moving out?)"]
    pub backFaceModeConvex: JPH_BackFaceMode,
    #[doc = " Indicates if we want to shrink the shape by the convex radius and then expand it again. This speeds up collision detection and gives a more accurate normal at the cost of a more 'rounded' shape."]
    pub useShrunkenShapeAndConvexRadius: bool,
    #[doc = " When true, and the shape is intersecting at the beginning of the cast (fraction = 0) then this will calculate the deepest penetration point (costing additional CPU time)"]
    pub returnDeepestPoint: bool,
}
#[test]
fn bindgen_test_layout_JPH_ShapeCastSettings() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_ShapeCastSettings> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_ShapeCastSettings>(),
        40usize,
        concat!("Size of: ", stringify!(JPH_ShapeCastSettings))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_ShapeCastSettings>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_ShapeCastSettings))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).base) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_ShapeCastSettings),
            "::",
            stringify!(base)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).backFaceModeTriangles) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_ShapeCastSettings),
            "::",
            stringify!(backFaceModeTriangles)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).backFaceModeConvex) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_ShapeCastSettings),
            "::",
            stringify!(backFaceModeConvex)
        )
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).useShrunkenShapeAndConvexRadius) as usize - ptr as usize
        },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_ShapeCastSettings),
            "::",
            stringify!(useShrunkenShapeAndConvexRadius)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).returnDeepestPoint) as usize - ptr as usize },
        37usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_ShapeCastSettings),
            "::",
            stringify!(returnDeepestPoint)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_RayCastSettings {
    #[doc = " How backfacing triangles should be treated (should we report back facing hits for triangle based shapes, e.g. MeshShape/HeightFieldShape?)"]
    pub backFaceModeTriangles: JPH_BackFaceMode,
    #[doc = " How backfacing convex objects should be treated (should we report back facing hits for convex shapes?)"]
    pub backFaceModeConvex: JPH_BackFaceMode,
    #[doc = " If convex shapes should be treated as solid. When true, a ray starting inside a convex shape will generate a hit at fraction 0."]
    pub treatConvexAsSolid: bool,
}
#[test]
fn bindgen_test_layout_JPH_RayCastSettings() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_RayCastSettings> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_RayCastSettings>(),
        12usize,
        concat!("Size of: ", stringify!(JPH_RayCastSettings))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_RayCastSettings>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_RayCastSettings))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).backFaceModeTriangles) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_RayCastSettings),
            "::",
            stringify!(backFaceModeTriangles)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).backFaceModeConvex) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_RayCastSettings),
            "::",
            stringify!(backFaceModeConvex)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).treatConvexAsSolid) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_RayCastSettings),
            "::",
            stringify!(treatConvexAsSolid)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_SpringSettings {
    pub mode: JPH_SpringMode,
    pub frequencyOrStiffness: f32,
    pub damping: f32,
}
